--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,39 @@
 
+/* eventueel nav menu onder stekjesbieb logo?
+.main-menu {
+    border-bottom: 1px solid black;
+}
+
+.main-menu ol {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.main-menu-item {
+    display: inline-block;
+}
+
+.main-menu-item a::after {
+    display: inline-block;
+    color: #000;
+    content: '>';
+    font-size: 80%;
+    font-weight: bold;
+    padding: 0 3px;
+}
+*/
+
+.box-buurtbewoners {
+    padding: 10px;
+    background-color: rgba(35, 178, 47, 0.5);
+
+ }
+
+ .box-kom-langs-bij-oba {
+    padding: 10px;
+ }
+
+ .box-vind-jouw-plant {
+    padding: 10px;
+    background-color:rgba(35, 178, 47, 0.5);
+ }
