--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-/* header styling */
+/* -------- header styling -------------*/
 header {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -6,43 +6,30 @@ header {
     grid-template-areas: 
     "buurtcampus-logo buurtcampus-footer"
     "stekjesbieb-logo buurtcampus-footer"
-  }
+}
 
 #buurtcampus-logo {
-    margin: 0px auto;
-    max-width: 1000px;
-    height: 30px;
+    max-width: 100%;
+    height: auto;
+    place-self: center;
     background-color: rgb(255, 255, 255);
-    border-radius: 0px;
     grid-area: buurtcampus-logo;
 }
 
 #stekjesbieb-logo {
-    margin: 0 auto;
-    max-width: 1000px;
-    height: 50px;
+    max-width: 100%;
+    height: auto;
     background-color: rgb(255, 255, 255);
-    border-radius: 0px;
     grid-area: stekjesbieb-logo;
 }
 
 #buurtcampus-footer{
-    margin: 0 auto;
-    max-width: 1000px;
-    height: 100px;
+    max-width: 100%;
     background-color: rgb(255, 255, 255);
-    border-radius: 0px;
     grid-area: buurtcampus-footer;
 }
 
-/*main styling*/
-
-h1{
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-}
-
- /* eventueel nav menu onder stekjesbieb logo?*/
+/* eventueel nav menu onder stekjesbieb logo?*/
 
 /*.main-menu {border-bottom: 1px solid black;}
 .main-menu ol {list-style-type: none; padding-left: 0;}
@@ -56,39 +43,99 @@ h1{
     padding: 0 3px;
 }*/
 
-/* buurtbewoner tips carousel */
+
+/*----------------main styling ----------------------*/
+h1{
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+}
+
+
+/* ------------carousel buurtbewoner tips------------ */
 
 .carousel-tips-buurtbewoners {
-    margin: 0 auto;
+    background-color:rgb(255, 255, 255, 0.5);
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     overflow: hidden;
     text-align: left;
   }
-  
-  .slides {
-    display: flex;
+
+  @media screen and (min-width: 400px) {
+    .carousel-tips-buurtbewoners {
+      background-color: red;
+    }
   }
   
-  .slides-item {
-    align-items: center;
-    border-radius: 1px;
-    display: flex;
-    flex-shrink: 0;
+.slides {
+/* display grid? display flex? in .slides of in .slides-item?*/
+
+  /*display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "tip-foto-buurtbewoner";
     font-size: 1rem;
-    height: 600px;
-    justify-content: center;
-    margin: 0 1rem;
-    position: relative;
-    transform: scale(1);
-    transform-origin: center center;
-    transition: transform .5s;
-    width: 100%;
+    padding: 15px;*/
+    /* ----flexbox nodig of grid?---
+    display: flex;
+    border-radius: 15px;
+    margin: 10px;
+    overflow: hidden;
+    text-align: left;*/
   }
   
+.slides-item {
+/* ---grid hier nodig of in .slides?---*/
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "tip-foto-buurtbewoner";
+    font-size: 1rem;
+    padding: 15px;
+  }
+
+.slides-item p, .slides-item img{
+    grid-area: tip-foto-buurtbewoner;
+}
+
+.slides-item p{
+    background-color: rgba(255, 255, 255, 0.5);
+/* ik wil dat margin responsive is met text/screensize*/
+    overflow: hidden;
+    place-self: start center;
+}
+  
+.slides-item img{
+    /* ik wil dat box rondom img randje zichtbaar is*/
+    max-width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ---- navigatie van carousel, later nodig?----
   .carousel__nav {
     padding: 1.25rem .5rem;
   }
-  
-  .slider-nav {
+    .slider-nav {
     align-items: center;
     background-color: #ddd;
     border-radius: 50%;
@@ -101,70 +148,28 @@ h1{
     text-decoration: none;
     width: 1.5rem;
   }
-  
-  .slider-nav:hover,
+    .slider-nav:hover,
   .slider-nav:active {
     background-color: #000;
     color: #fff;
   }
-  
-  .slide-1 {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 10%;
-  }
-  
-  .slide-2 {
-    background-color: #bfd;
-  }
-  
-  .slide-3 {
-    background-color: #cdf;
-  }
-  
-  .slide-4 {
-    background-color: #dca;
-  }
-  
-  .slide-5 {
-    background-color: #ffc;
-  }
+*/
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* ----- styling section "plant verzorgtips buurtbewoners" -----*/ 
 .box-buurtbewoners {
     padding: 10px;
     background-color: rgba(35, 178, 47, 0.5);
 
  }
-
+/* ----- styling section "kom langs bij ObA" -----*/ 
  .box-kom-langs-bij-oba {
     padding: 10px;
  }
-
+/* ----- styling section "vind jouw plant" -----*/ 
  .box-vind-jouw-plant {
     padding: 10px;
     background-color:rgba(35, 178, 47, 0.5);
