--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,13 @@
-/* header styling */
+/* BODY STYLING */
+body{
+width: 100%;
+padding:1rem 2rem 0 2rem;
+/*background-color: rgba(35, 178, 47, 0.5);*/
+color: rgb(49, 39, 113);
+}
+
+
+/* HEADER STYLING */
 header {
   display: grid;
   grid-template-columns: 1fr ;
@@ -6,31 +15,43 @@ header {
   grid-template-areas:
   "logo-buurtcampus-plantswap" 
 }
+
 header>img{
   max-width: 100%;
   height: auto;
   place-self: center;
-  background-color: rgb(255, 255, 255);
+  padding-left:5rem;
   grid-area: logo-buurtcampus-plantswap;
 }
 
-/* main styling */
-h1{
-  color: rgb(49, 39, 113);
-  background-color: rgb(255, 255, 255);
-  text-align: center;
+/* MAIN STYLING */
+main {
+background-color: rgba(35, 178, 47, 0.5);
+border:rgba(35, 178, 47, 0.5);
+}
+
+.main-header{
+background-color: rgb(255, 255, 255); 
+background-color: rgba(35, 178, 47, 0.214);
+text-align: center;
+padding: 10px;
 }
 
 
-/* styling box buurtbewoners*/
+h1{
+  color: rgb(49, 39, 113);
+  text-align: center;
+ }
 
+
+/* CAROUSEL "TIPS BUURTBEWONERS" STYLING */ 
 .box-buurtbewoners {
   padding: 10px;
-  background-color: rgba(35, 178, 47, 0.5);
-  }
+}
 
 h2{
   text-align: center;
+  background-color: rgb(255, 255, 255); 
   }
 
 .carousel-tips-buurtbewoners {
@@ -80,9 +101,55 @@ h2{
 .slides-item img{
   border-radius: 10px;
   max-width: 100%;
+  background-color: rgba(35, 178, 47, 0.214);
 }
 
-/* footer styling */
+
+
+/* "KOM LANGS BIJ OBA" STYLING */ 
+.box-kom-langs-bij-oba {
+  padding: 10px;
+  text-align: center;
+}
+
+.box-kom-langs-bij-oba h2{
+text-decoration: underline;
+}
+
+
+/* "VIND JOUW PLANT" STYLING */ 
+ .box-vind-jouw-plant {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+   /* align-items: center; */
+    padding: 10px;
+    background-color:rgba(35, 178, 47, 0.5);
+    text-align: center;
+    place-items:
+  }
+
+ .box-vind-jouw-plant button {
+  border-radius: 10px;
+  color: rgb(49, 39, 113);
+  background-color:rgb(255, 255, 255, 0.5);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  border-style: none;
+  padding: 5px 10px;
+  text-align: center;
+  transition-duration: 0.4s;
+ }
+
+.box-vind-jouw-plant button:hover {
+  background-color: rgb(49, 39, 113); 
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: white;
+}
+
+
+
+
+/* FOOTER STYLING*/
 footer img {
   max-width: 100%;
   height: auto;
@@ -91,34 +158,57 @@ footer img {
 }
 
 
-/* media queries voor breakpoints */
+
+/* MEDIA QUERIES BREAKPOINTS CAROUSEL */
+
+@media screen and (min-width: 375px) {
+  .carousel-tips-buurtbewoners {
+    background-color: rgb(49, 39, 113, 0.8) /*tijdelijke kleur als voorbeeld*/
+  }
+}
+
+@media screen and (min-width: 625px) {
+  .carousel-tips-buurtbewoners {
+    background-color: rgb(49, 39, 113, 0.6);/*tijdelijke kleur als voorbeeld*/
+  }
+}
+
+/* MEDIA QUERIES BREAKPOINTS BUTTONS */
 
 @media screen and (min-width: 400px) {
-  .carousel-tips-buurtbewoners {
-    background-color: red; /*tijdelijke kleur als voorbeeld*/
+  .box-vind-jouw-plant button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right:6rem;
+    margin-left:6rem;
+    max-width: 400px;
   }
 }
 
-@media screen and (min-width: 800px) {
-  .carousel-tips-buurtbewoners {
-    background-color: rgb(255, 0, 242);/*tijdelijke kleur als voorbeeld*/
+@media screen and (min-width: 600px) {
+  .box-vind-jouw-plant button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-right:6rem;
+    margin-left:6rem;
+    max-width: 400px;
   }
 }
 
-/* styling "plant verzorgtips buurtbewoners" */ 
-.box-buurtbewoners {
-    padding: 10px;
-    background-color: rgba(35, 178, 47, 0.5);
- }
+@media screen and (min-width: 625px) {
+  .box-vind-jouw-plant button {
+    display: flex;
+    align-content: space-between;
+    flex-direction: column;
+    margin-right:6rem;
+    margin-left:6rem;
+    max-width: 200px;
+  }
+}
 
-/*  styling "kom langs bij ObA" */ 
- .box-kom-langs-bij-oba {
-    padding: 10px;
- }
 
- 
-/* styling "vind jouw plant" */ 
- .box-vind-jouw-plant {
-    padding: 10px;
-    background-color:rgba(35, 178, 47, 0.5);
- }
+
+
